using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class CacheString : MonoBehaviour
{
    public static string TAG_IDLE = "Idle";
    public static string TAG_IsSuprised = "IsSuprised";
    public static string TAG_IsAttacked = "IsAttacked";
    public static string TAG_Chad = "Chad";
    public static string TAG_Collect = "Collect";
    public static string TAG_NoCoin = "NoCoin";
}
